# ComplyArc

./: .env.example  .env.render.example  .gitignore  MD.txt  The Guide.txt  admin login.txt  arabic description.txt  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  vercel.json
apps/api/: Dockerfile  alembic.ini  debug_db.py  main.py  pyproject.toml  render-start.sh  requirements.txt  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep
apps/api/api/: index.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  admin.py  alerts.py  auth.py  cases.py  clients.py  dashboard.py  media.py  monitoring_routes.py  reports.py  risk.py  screening.py  settings.py
apps/api/app/core/: __init__.py  config.py  deps.py  security.py
apps/api/app/db/: __init__.py  base.py  init_db.py
apps/api/app/models/: __init__.py  adverse_media.py  audit_log.py  case.py  client.py  monitoring.py  report.py  risk_score.py  sanctions_entry.py  screening.py  system_settings.py  ubo.py  user.py
apps/api/app/schemas/: __init__.py  auth.py  case.py  client.py  dashboard.py  media.py  risk.py  screening.py
apps/api/app/services/: __init__.py  adverse_media_service.py  audit_service.py  case_service.py  client_service.py  risk_engine.py  sanctions_ingestor.py  screening_service.py
apps/api/scratch/: check_user_roles.py  promote_admin.py  test_ingest.py  test_settings.py
apps/web/: .env.production  Dockerfile  check_bom.ps1  next.config.js  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  (+1 more)
(+19 files in other folders)
