[project]
name = "complyarc-api"
version = "1.0.0"
description = "ComplyArc — AI-Native AML & eKYC Backend API"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    # Redis & Workers
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    # Entity Resolution
    "rapidfuzz>=3.9.0",
    "jellyfish>=1.0.0",
    # AI & NLP
    "openai>=1.30.0",
    "httpx>=0.27.0",
    # Data Processing
    "lxml>=5.2.0",
    "pandas>=2.2.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "pycountry>=24.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
